--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
 <p class="body-font">Good First Issues</p>
 
-<footer >
+<footer class="foot">
+  
   <a class="footer" href="https://github.com/github-quest/github-quest.github.io">Link to github page</a>
+  
 </footer>
 
 </body>
